--- a/desafio/index.html
+++ b/desafio/index.html
@@ -15,7 +15,7 @@
     <main> 
         <section class="perfil">
             <div>
-                <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto_perfil">
+                <img src="img/22100428046161.webp" alt="perfil" class="foto_perfil">
             </div>
             <div>
                 <h1>Eduarda Brunken Barth</h1>
@@ -25,13 +25,12 @@
             </div>
         </section>
         <section class="feed">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
-            <img src="ComoTirareEditarSuaFotoparaPerfilemRedesSociaisfeaturedimagee1559023010630.webp" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
+            <img src="img/1800.jpeg" alt="perfil" class="foto">
         </section>
     </main>
 </body>
