--- a/desafio/index.html
+++ b/desafio/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 <body>
     <header>
-        <nav>
-            <button>Log off</button>
-        </nav>
+        <section class="insta">
+            <h1>Instagram</h1>
+        </section>
+        <section>
+            <img height="40px" src="img/mais.avif" alt="maizinho">
+            <img height="40px" src="img/risco.png" alt="tres-risquinhos">
+        </section>
     </header>
     <main> 
         <section class="perfil">
